test/resources/parser/failing/IntError2.grading.amy
object IntError 
  def foo(): Int(64) := 42 end foo
end IntError